Add html and styling to mobile header

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,7 +11,7 @@ $dark-gray: #1E2A47;
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
 body {
-    min-height: 100vh;
+    // min-height: 100vh;
     font-size: 15px;
     font-family: 'Space Mono', monospace;
     font-weight: 400;
