--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -8,13 +8,15 @@
 }
 
 .page-wrapper {
-  margin: 31px 0 0;
+  margin: 31px 24px 0;
+  max-width: 450px;
 }
 /*----------------------------
       header section
 ----------------------------*/
 .header {
   display: flex;
+  justify-content: space-between;
   gap: 117px;
 
   &__logo {
@@ -49,9 +51,11 @@
     align-items: center;
     background: #fefefe;
     border-radius: 15px;
+    // padding: 18px 7px 18px 16px;
     box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
-    margin: 54px 0;
-    width: 327px;
+    margin: 36px 0 16px;
+    // gap: 7px;
+    // width: 327px;
     height: 60px;
   }
 
@@ -68,12 +72,14 @@
     font-size: 13px;
     font-weight: 400;
     line-height: 25px;
+    // width: 100%;
     flex-basis: 184px;
   }
 
   &__search-button {
     border-radius: 10px;
     border: none;
+    // width: 84px;
     flex-basis: 84px;
     height: 46px;
     background: $blue;
@@ -88,4 +94,95 @@
     text-align: center;
     color: $white;
   }
+
+  &__card {
+    // display: flex;
+    background: #fefefe;
+    border-radius: 15px;
+    padding: 32px 24px 48px;
+    box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.1986);;
+  }
+
+  &__details {
+    display: flex;
+    gap: 19px;
+    // width: 70px;
+    // height: 70px;
+  }
+
+  &__image-container {
+    width: 70px;
+    height: 70px;
+  }
+
+  &__profile-img {
+    border-radius: 50%;
+  }
+
+  &__name {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+  }
+
+  &__handle {
+    color: $blue;
+  }
+
+  &__joining-date {
+    color: $gray;
+  }
+
+  &__description {
+    line-height: 25px;
+    margin: 33px 0 23px;
+  }
+
+  &__stats {
+    display: flex;
+    justify-content: space-between;
+    background: #f6f8ff;
+    border-radius: 10px;
+    padding: 18px 30px;
+    // gap: 82px;
+  }
+
+  &__stat-label {
+    font-size: 11px;
+    line-height: 16px;
+    text-align: center;
+    color: $queen-blue;
+  }
+
+  &__numbers {
+    display: block;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: center;
+    color: $black;
+  }
+
+
+  &__info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin:24px 0 0;
+  }
+
+  &__intel {
+    display: flex;
+    gap: 16px 19.25px;
+  }
+
+  &__intel-icon {
+    width: 100%;
+    height: 20px;
+  }
+
+  &__location-icon{
+    margin-right: 6.25px;
+  }
+
 }
