--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,39 +1,71 @@
-$blue: #0079FF;
-$gray: #697C9A;
-$queen-blue: #4B6A9B;
-$black: #2B3442;
-$white: #FFFFFF;
-$dark-black: #141D2F;
-$dark-gray: #1E2A47;
+$tablet: 768px;
+$desktop: 1440px;
 
+.light-theme {
+  --body-bg: hsla(227, 100%, 98%, 1);
+  --card-bg: hsla(0, 0%, 100%, 1);
+  --header-logo: hsla(220, 18%, 16%, 1);
+  --toggle: hsla(217, 20%, 51%, 1);
+  --toggle-hover: hsla(220, 18%, 16%, 1);
+  --text-primary: hsla(217, 35%, 45%, 1);
+  --date-color: hsla(217, 20%, 51%, 1);
+  --accent: hsla(217, 21%, 21%, 1);
+}
 
+.dark-theme {
+  --body-bg: hsla(220, 41%, 13%, 1);
+  --card-bg: hsla(222, 41%, 20%, 1);
+  --header-logo: hsla(0, 0%, 100%, 1);
+  --toggle: hsla(0, 0%, 100%, 1);
+  --toggle-hover: hsla(222, 44%, 70%, 1);
+  --text-primary: hsla(0, 0%, 100%, 1);
+  --date-color: hsla(0, 0%, 100%, 1);
+  --accent: hsla(0, 0%, 100%, 1);
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+$blue: #0079ff;
+$gray: #697c9a;
+$queen-blue: #4b6a9b;
+$black: #2b3442;
+$white: #ffffff;
+$red: #f74646;
+
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
 
 body {
-    // min-height: 100vh;
-    font-size: 15px;
-    font-family: 'Space Mono', monospace;
-    font-weight: 400;
-    overflow-x: hidden;
+  min-height: 100vh;
+  font-size: 15px;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  overflow-x: hidden;
 }
 
-h1, h2 ,h3, h4, h5, h6 {
-    color: $black;
-    font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $black;
+  font-weight: 700;
 }
 
-p {
-    font-size: 18px;
-    line-height: 28px;
-    font-weight: 400;
+p,
+a {
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 400;
+}
+
+::placeholder {
+  color: var(--text-primary);
 }
 
 img {
-    width: 100%;
-    height: auto;
-  }
+  width: 100%;
+  height: auto;
+}
 
-
-$tablet: 768px;
-$desktop: 1440px;
+svg {
+  flex-shrink: 0;
+}
