--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,5 @@
-$tablet: 768px;
-$desktop: 1440px;
+$tablet: 48rem;
+$desktop: 90rem;
 
 .light-theme {
   --body-bg: hsla(227, 100%, 98%, 1);
@@ -34,7 +34,7 @@ $red: #f74646;
 
 body {
   min-height: 100vh;
-  font-size: 15px;
+  font-size: 0.9375rem;
   font-family: "Space Mono", monospace;
   font-weight: 400;
   overflow-x: hidden;
@@ -52,8 +52,8 @@ h6 {
 
 p,
 a {
-  font-size: 18px;
-  line-height: 28px;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
   font-weight: 400;
 }
 
