--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -9,16 +9,16 @@
 }
 
 .page-wrapper {
-  margin: 31px 24px 0;
-  width: clamp(327px, 100vw, 450px);
+  margin: 1.9375rem 1.5rem 0;
+  width: clamp(20.4375rem, 100vw, 28.125rem);
 
   @media only screen and (min-width: $tablet) {
-    width: clamp(573px, 74.609375vw, 665px);
+    width: clamp(35.8125rem, 74.609375vw, 41.5625rem);
   }
 
   @media only screen and (min-width: $desktop) {
-    width: clamp(730px, 50.6944444444vw, 850px);
-    margin: 144px 0 0;
+    width: clamp(45.625rem, 50.6944444444vw, 53.125rem);
+    margin: 9rem 0 0;
   }
 }
 /*----------------------------
@@ -27,23 +27,23 @@
 .header {
   display: flex;
   justify-content: space-between;
-  gap: 117px;
+  gap: 7.3125rem;
 
   &__logo {
-    font-size: 26px;
+    font-size: 1.625rem;
     font-weight: 700;
-    line-height: 38.5px;
+    line-height: 2.4063rem;
     color: var(--header-logo);
   }
 
   &__button {
     display: flex;
     align-items: center;
-    font-size: 13px;
+    font-size: 0.8125rem;
     font-weight: 700;
-    line-height: 19.25px;
-    letter-spacing: 2.5px;
-    gap: 16px;
+    line-height: 1.2031rem;
+    letter-spacing: 0.1563rem;
+    gap: 1rem;
     border: none;
     padding: 0;
     background: none;
@@ -81,28 +81,28 @@
     justify-content: space-between;
     align-items: center;
     background: var(--card-bg);
-    border-radius: 15px;
-    box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.198567);
-    margin: 36px 0 16px;
-    gap: 7px;
-    height: 60px;
+    border-radius: 0.9375rem;
+    box-shadow: 0rem 1rem 1.875rem -0.625rem rgba(70, 96, 187, 0.198567);
+    margin: 2.25rem 0 1rem;
+    gap: 0.4375rem;
+    height: 3.75rem;
     transition: all 1s ease;
 
     @media only screen and (min-width: $tablet) {
-      height: 69px;
-      gap: 24px;
+      height: 4.3125rem;
+      gap: 1.5rem;
     }
   }
 
   &__icon {
-    width: 20px;
-    height: 20px;
-    margin-left: 10px;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: 0.625rem;
 
     @media only screen and (min-width: $tablet) {
-      width: 24px;
-      height: 24px;
-      margin-left: 32px;
+      width: 1.5rem;
+      height: 1.5rem;
+      margin-left: 2rem;
     }
   }
 
@@ -110,24 +110,24 @@
     border: none;
     background: none;
     font-family: "Space Mono", monospace;
-    font-size: 13px;
-    font-size: clamp(12px, 3vw, 13px);
+    font-size: 0.8125rem;
+    font-size: clamp(0.75rem, 3vw, 0.8125rem);
     font-weight: 400;
-    line-height: 25px;
-    width: calc(100% - 84px);
+    line-height: 1.5625rem;
+    width: calc(100% - 5.25rem);
     color: var(--text-primary);
     // position: relative;
 
     @media only screen and (min-width: $tablet) {
-      font-size: 18px;
+      font-size: 1.125rem;
     }
   }
 
   &__error {
     font-weight: 700;
-    line-height: 22px;
+    line-height: 1.375rem;
     color: $red;
-    margin: 0 12px 0 0;
+    margin: 0 0.75rem 0 0;
     display: none;
   }
 
@@ -137,26 +137,26 @@
   }
 
   &__button {
-    border-radius: 10px;
+    border-radius: 0.625rem;
     border: none;
-    width: 84px;
+    width: 5.25rem;
     flex-shrink: 0;
-    height: 50px;
+    height: 3.125rem;
     background: $blue;
-    margin-right: 7px;
+    margin-right: 0.4375rem;
 
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 700;
-    line-height: 21px;
+    line-height: 1.3125rem;
     text-align: center;
     color: $white;
     transition: all 0.3s ease-in;
 
     @media only screen and (min-width: $tablet) {
-      width: 106px;
-      margin-right: 10px;
-      font-size: 16px;
-      line-height: 24px;
+      width: 6.625rem;
+      margin-right: 0.625rem;
+      font-size: 1rem;
+      line-height: 1.5rem;
     }
   }
   &__button:hover {
@@ -167,44 +167,44 @@
 .card {
   & {
     display: grid;
-    grid-template-columns: 70px 1fr;
-    column-gap: 19px;
+    grid-template-columns: 4.375rem 1fr;
+    column-gap: 1.1875rem;
     background: var(--card-bg);
-    border-radius: 15px;
-    padding: 32px 24px 48px;
-    box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.1986);
+    border-radius: 0.9375rem;
+    padding: 2rem 1.5rem 3rem;
+    box-shadow: 0rem 1rem 1.875rem -0.625rem rgba(70, 96, 187, 0.1986);
     transition: all 1s ease;
 
     @media only screen and (min-width: $tablet) {
-      padding: 40px;
-      grid-template-columns: 117px 1fr;
-      column-gap: 41px;
+      padding: 2.5rem;
+      grid-template-columns: 7.3125rem 1fr;
+      column-gap: 2.5625rem;
     }
 
     @media only screen and (min-width: $desktop) {
       display: grid;
-      grid-template-rows: 85px;
-      column-gap: 37px;
-      padding: 48px;
+      grid-template-rows: 5.3125rem;
+      column-gap: 2.3125rem;
+      padding: 3rem;
     }
   }
 
   &__details {
     display: flex;
-    gap: 19px;
+    gap: 1.1875rem;
 
     @media only screen and (min-width: $tablet) {
-      gap: 41px;
+      gap: 2.5625rem;
     }
   }
 
   &__image-container {
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
 
     @media only screen and (min-width: $tablet) {
-      width: 117px;
-      height: 117px;
+      width: 7.3125rem;
+      height: 7.3125rem;
     }
   }
 
@@ -221,37 +221,37 @@
   }
 
   &__name {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 1.5rem;
     color: var(--accent);
 
     @media only screen and (min-width: $tablet) {
-      font-size: 26px;
-      line-height: 38px;
+      font-size: 1.625rem;
+      line-height: 2.375rem;
     }
   }
 
   &__handle {
     color: $blue;
-    font-size: 13px;
-    line-height: 19px;
+    font-size: 0.8125rem;
+    line-height: 1.1875rem;
 
     @media only screen and (min-width: $tablet) {
-      font-size: 16px;
-      line-height: 24px;
+      font-size: 1rem;
+      line-height: 1.5rem;
     }
   }
 
   &__joindate {
     color: $gray;
-    font-size: 13px;
-    line-height: 19px;
+    font-size: 0.8125rem;
+    line-height: 1.1875rem;
     color: var(--date-color);
 
     @media only screen and (min-width: $tablet) {
-      font-size: 15px;
-      line-height: 22px;
+      font-size: 0.9375rem;
+      line-height: 1.375rem;
     }
 
     @media only screen and (min-width: $desktop) {
@@ -263,14 +263,14 @@
   }
 
   &__bio {
-    font-size: 13px;
-    line-height: 25px;
-    margin: 33px 0 23px;
+    font-size: 0.8125rem;
+    line-height: 1.5625rem;
+    margin: 2.0625rem 0 1.4375rem;
     color: var(--text-primary);
     grid-column: 1/-1;
 
     @media only screen and (min-width: $tablet) {
-      font-size: 15px;
+      font-size: 0.9375rem;
     }
 
     @media only screen and (min-width: $desktop) {
@@ -286,39 +286,39 @@
     justify-items: start;
     grid-column: 1/-1;
     background: var(--body-bg);
-    border-radius: 10px;
-    padding: 18px 30px;
+    border-radius: 0.625rem;
+    padding: 1.125rem 1.875rem;
     transition: all 1s ease;
 
     @media only screen and (min-width: $desktop) {
       grid-column: 2/-1;
-      margin: 32px 0 37px;
+      margin: 2rem 0 2.3125rem;
     }
   }
 
   &__stat {
-    font-size: 11px;
-    line-height: 16px;
+    font-size: 0.6875rem;
+    line-height: 1rem;
     text-align: center;
     color: var(--text-primary);
 
     @media only screen and (min-width: $tablet) {
-      font-size: 13px;
-      line-height: 19px;
+      font-size: 0.8125rem;
+      line-height: 1.1875rem;
     }
   }
 
   &__numbers {
     display: block;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 1.5rem;
     text-align: center;
     color: var(--accent);
 
     @media only screen and (min-width: $tablet) {
-      font-size: 22px;
-      line-height: 33px;
+      font-size: 1.375rem;
+      line-height: 2.0625rem;
       text-align: left;
     }
   }
@@ -327,13 +327,13 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-column: 1/-1;
-    gap: 16px;
-    margin: 24px 0 0;
+    gap: 1rem;
+    margin: 1.5rem 0 0;
 
     @media only screen and (min-width: $tablet) {
       grid-template-columns: 1fr 1fr;
-      margin: 30px 0 0;
-      column-gap: 60px;
+      margin: 1.875rem 0 0;
+      column-gap: 3.75rem;
     }
 
     @media only screen and (min-width: $desktop) {
@@ -344,7 +344,7 @@
 
   &__intel {
     display: flex;
-    gap: 16px 19.25px;
+    gap: 1rem 1.2031rem;
     align-items: center;
   }
 
@@ -361,21 +361,21 @@
 
   &__intel-icon {
     width: 100%;
-    height: 20px;
+    height: 1.25rem;
   }
 
   &__location-icon {
-    margin-right: 6.25px;
+    margin-right: 0.3906rem;
   }
 
   &__intel-text {
-    font-size: 13px;
-    line-height: 19px;
+    font-size: 0.8125rem;
+    line-height: 1.1875rem;
     color: var(--text-primary);
 
     @media only screen and (min-width: $tablet) {
-      font-size: 15px;
-      line-height: 22px;
+      font-size: 0.9375rem;
+      line-height: 1.375rem;
     }
   }
 }
